kubernetes/apps/selfhosted/openproject/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: openproject
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: openproject
  egress:
    # PostgreSQL database
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP

    # Authentik for potential OIDC integration
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/component: server
            io.kubernetes.pod.namespace: authentik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
